--- a/content/pages/contacts/index.html
+++ b/content/pages/contacts/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Contacts"
-permalink: "/contacts"
+url: "/contacts"
 identifier: "587da8f8-9d35-44e1-97dd-5bb57f824f23"
 parent: ""
 related_category: ""
