--- a/content/pages/infos/index.html
+++ b/content/pages/infos/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Infos"
-permalink: "/infos"
+url: "/infos"
 identifier: "fc4090fb-62c9-49ad-ac7d-c18fe290c94f"
 parent: ""
 description: >
