--- a/content/pages/intranet/aides-sante-et-prevention/index.html
+++ b/content/pages/intranet/aides-sante-et-prevention/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Aides, santé et prévention"
-permalink: "/intranet/aides-sante-et-prevention"
+url: "/intranet/aides-sante-et-prevention"
 identifier: "4e56efdb-d372-4939-b47a-ff36aa1f882e"
 parent: "2a2f8795-4cc2-454f-92de-af243f5cfa74"
 related_category: ""
