--- a/content/pages/intranet/index.html
+++ b/content/pages/intranet/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Intranet"
-permalink: "/intranet"
+url: "/intranet"
 identifier: "2a2f8795-4cc2-454f-92de-af243f5cfa74"
 parent: ""
 related_category: ""
