--- a/content/pages/mentions-legales/index.html
+++ b/content/pages/mentions-legales/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Mentions légales"
-permalink: "/mentions-legales"
+url: "/mentions-legales"
 identifier: "5d38107e-e6ef-4e83-a78b-108c103f3563"
 parent: ""
 related_category: ""
