--- a/content/pages/notre-institut/consignes-de-securite/index.html
+++ b/content/pages/notre-institut/consignes-de-securite/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Consignes de sécurité"
-permalink: "/notre-institut/consignes-de-securite"
+url: "/notre-institut/consignes-de-securite"
 identifier: "6edd839d-a21b-4739-a0e6-13cbf449ba74"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
