--- a/content/pages/notre-institut/equipe-pedagogique/index.html
+++ b/content/pages/notre-institut/equipe-pedagogique/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Équipe pédagogique"
-permalink: "/notre-institut/equipe-pedagogique"
+url: "/notre-institut/equipe-pedagogique"
 identifier: "32631db4-edb2-41e6-8bda-884a060112f6"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
