--- a/content/pages/notre-institut/index.html
+++ b/content/pages/notre-institut/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Notre Institut"
-permalink: "/notre-institut"
+url: "/notre-institut"
 identifier: "75e9814e-7127-4bed-bd83-630cbb67da07"
 parent: ""
 related_category: ""
