--- a/content/pages/notre-institut/les-atouts-des-iut/index.html
+++ b/content/pages/notre-institut/les-atouts-des-iut/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Les atouts des IUT"
-permalink: "/notre-institut/les-atouts-des-iut"
+url: "/notre-institut/les-atouts-des-iut"
 identifier: "757eeaff-7ae2-4e2d-a63e-408c3cc416bb"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
