--- a/content/pages/notre-institut/plan-dacces-et-contact/index.html
+++ b/content/pages/notre-institut/plan-dacces-et-contact/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Plan d’accès et contact"
-permalink: "/notre-institut/plan-dacces-et-contact"
+url: "/notre-institut/plan-dacces-et-contact"
 identifier: "ea93ebfd-4769-4ea6-bb42-a7e057b4f742"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
