--- a/content/pages/notre-institut/presentation-de-liut/index.html
+++ b/content/pages/notre-institut/presentation-de-liut/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Présentation de l&#39;IUT"
-permalink: "/notre-institut/presentation-de-liut"
+url: "/notre-institut/presentation-de-liut"
 identifier: "b4b0f980-807d-4757-bc20-a19574a3b358"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
