--- a/content/pages/notre-institut/relations-avec-les-entreprises/index.html
+++ b/content/pages/notre-institut/relations-avec-les-entreprises/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Relations avec les entreprises"
-permalink: "/notre-institut/relations-avec-les-entreprises"
+url: "/notre-institut/relations-avec-les-entreprises"
 identifier: "6e6cb8fa-60c8-4645-90e8-0919c0d69e1c"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
