--- a/content/pages/notre-institut/ressources-techniques/index.html
+++ b/content/pages/notre-institut/ressources-techniques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Ressources"
-permalink: "/notre-institut/ressources-techniques"
+url: "/notre-institut/ressources-techniques"
 identifier: "47de9915-cb5c-4a8f-b62f-b5494c620e6d"
 parent: "75e9814e-7127-4bed-bd83-630cbb67da07"
 related_category: ""
