--- a/content/pages/offre-de-formation/apprentissage/index.html
+++ b/content/pages/offre-de-formation/apprentissage/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Apprentissage"
-permalink: "/offre-de-formation/apprentissage"
+url: "/offre-de-formation/apprentissage"
 identifier: "ef59a11f-ab98-4ca1-83c4-eec9b83946fa"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
