--- a/content/pages/offre-de-formation/but/animation-sociale-et-socioculturelle/index.html
+++ b/content/pages/offre-de-formation/but/animation-sociale-et-socioculturelle/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Animation sociale et socioculturelle"
-permalink: "/offre-de-formation/but/animation-sociale-et-socioculturelle"
+url: "/offre-de-formation/but/animation-sociale-et-socioculturelle"
 identifier: "0e9b0693-c0e0-4497-8883-e0ca2e6c5acc"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
