--- a/content/pages/offre-de-formation/but/communication-des-organisations/index.html
+++ b/content/pages/offre-de-formation/but/communication-des-organisations/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Communication des organisations"
-permalink: "/offre-de-formation/but/communication-des-organisations"
+url: "/offre-de-formation/but/communication-des-organisations"
 identifier: "0a72915a-852d-4620-aa26-b08c8882777d"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
