--- a/content/pages/offre-de-formation/but/index.html
+++ b/content/pages/offre-de-formation/but/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Le Bachelor Universitaire de Technologie"
-permalink: "/offre-de-formation/but"
+url: "/offre-de-formation/but"
 identifier: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
