--- a/content/pages/offre-de-formation/but/information-numerique-dans-les-organisations/index.html
+++ b/content/pages/offre-de-formation/but/information-numerique-dans-les-organisations/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Information numérique dans les organisations"
-permalink: "/offre-de-formation/but/information-numerique-dans-les-organisations"
+url: "/offre-de-formation/but/information-numerique-dans-les-organisations"
 identifier: "b7d0de17-abcf-4075-b941-d985600318e8"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
