--- a/content/pages/offre-de-formation/but/metiers-du-livre-et-du-patrimoine/index.html
+++ b/content/pages/offre-de-formation/but/metiers-du-livre-et-du-patrimoine/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Métiers du livre et du patrimoine"
-permalink: "/offre-de-formation/but/metiers-du-livre-et-du-patrimoine"
+url: "/offre-de-formation/but/metiers-du-livre-et-du-patrimoine"
 identifier: "d713f079-6e6b-4cd7-af12-592ab858aebf"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
