--- a/content/pages/offre-de-formation/but/metiers-du-multimedia-et-de-linternet/index.html
+++ b/content/pages/offre-de-formation/but/metiers-du-multimedia-et-de-linternet/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Métiers du multimédia et de l’internet"
-permalink: "/offre-de-formation/but/metiers-du-multimedia-et-de-linternet"
+url: "/offre-de-formation/but/metiers-du-multimedia-et-de-linternet"
 identifier: "c8ea01ce-49ff-4000-9b31-d4ee89340249"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
