--- a/content/pages/offre-de-formation/but/publicite/index.html
+++ b/content/pages/offre-de-formation/but/publicite/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Publicité"
-permalink: "/offre-de-formation/but/publicite"
+url: "/offre-de-formation/but/publicite"
 identifier: "8f69c3f1-2ae6-4f25-bb70-eb559bb62906"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
