--- a/content/pages/offre-de-formation/but/villes-et-territoires-durables/index.html
+++ b/content/pages/offre-de-formation/but/villes-et-territoires-durables/index.html
@@ -1,6 +1,6 @@
 ---
 title: "BUT Villes et territoires durables"
-permalink: "/offre-de-formation/but/villes-et-territoires-durables"
+url: "/offre-de-formation/but/villes-et-territoires-durables"
 identifier: "adcdcdac-0078-4709-a669-b25c5f2dbbe2"
 parent: "d8997146-63df-47ca-b7b3-02b9c35490b2"
 related_category: ""
