--- a/content/pages/offre-de-formation/diplomes-universitaires/du-gestion-et-animation-de-ludotheques/index.html
+++ b/content/pages/offre-de-formation/diplomes-universitaires/du-gestion-et-animation-de-ludotheques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "DU Gestion et Animation de Ludothèques"
-permalink: "/offre-de-formation/diplomes-universitaires/du-gestion-et-animation-de-ludotheques"
+url: "/offre-de-formation/diplomes-universitaires/du-gestion-et-animation-de-ludotheques"
 identifier: "8d04bfcd-cea4-412e-8c00-4a7f85832ec6"
 parent: "1fe83d6e-dd23-4c11-803b-4f328a7c1c7a"
 related_category: ""
