--- a/content/pages/offre-de-formation/diplomes-universitaires/etudes-technologiques-internationales-dueti/index.html
+++ b/content/pages/offre-de-formation/diplomes-universitaires/etudes-technologiques-internationales-dueti/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Diplôme Universitaire d&#39;Etudes Technologiques Internationales (DUETI)"
-permalink: "/offre-de-formation/diplomes-universitaires/etudes-technologiques-internationales-dueti"
+url: "/offre-de-formation/diplomes-universitaires/etudes-technologiques-internationales-dueti"
 identifier: "870ec8c9-4697-4508-9141-96e832e9bb72"
 parent: "1fe83d6e-dd23-4c11-803b-4f328a7c1c7a"
 related_category: ""
