--- a/content/pages/offre-de-formation/diplomes-universitaires/index.html
+++ b/content/pages/offre-de-formation/diplomes-universitaires/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Diplômes Universitaires (DU)"
-permalink: "/offre-de-formation/diplomes-universitaires"
+url: "/offre-de-formation/diplomes-universitaires"
 identifier: "1fe83d6e-dd23-4c11-803b-4f328a7c1c7a"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
