--- a/content/pages/offre-de-formation/dut/dut-animation-sociale-et-socioculturelle-fc/index.html
+++ b/content/pages/offre-de-formation/dut/dut-animation-sociale-et-socioculturelle-fc/index.html
@@ -1,6 +1,6 @@
 ---
 title: "DUT Animation Sociale et Socioculturelle (en formation continue)"
-permalink: "/offre-de-formation/dut/dut-animation-sociale-et-socioculturelle-fc"
+url: "/offre-de-formation/dut/dut-animation-sociale-et-socioculturelle-fc"
 identifier: "ee87236a-da28-4247-a99f-3f1c51c0b14b"
 parent: "25fbc508-a007-4cd2-8818-c2fd3765e847"
 related_category: ""
