--- a/content/pages/offre-de-formation/dut/index.html
+++ b/content/pages/offre-de-formation/dut/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Diplômes Universitaires de Technologie (DUT)"
-permalink: "/offre-de-formation/dut"
+url: "/offre-de-formation/dut"
 identifier: "25fbc508-a007-4cd2-8818-c2fd3765e847"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
