--- a/content/pages/offre-de-formation/formation-continue/codes-utiles/index.html
+++ b/content/pages/offre-de-formation/formation-continue/codes-utiles/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Codes utiles"
-permalink: "/offre-de-formation/formation-continue/codes-utiles"
+url: "/offre-de-formation/formation-continue/codes-utiles"
 identifier: "c485c52b-ecb1-4b46-948f-298de3f2f1be"
 parent: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 related_category: ""
