--- a/content/pages/offre-de-formation/formation-continue/index.html
+++ b/content/pages/offre-de-formation/formation-continue/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Formation continue"
-permalink: "/offre-de-formation/formation-continue"
+url: "/offre-de-formation/formation-continue"
 identifier: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
