--- a/content/pages/offre-de-formation/formation-continue/mediation/index.html
+++ b/content/pages/offre-de-formation/formation-continue/mediation/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Médiation"
-permalink: "/offre-de-formation/formation-continue/mediation"
+url: "/offre-de-formation/formation-continue/mediation"
 identifier: "aa20bbb7-e5af-48ec-a202-9c8de7449347"
 parent: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 related_category: ""
