--- a/content/pages/offre-de-formation/formation-continue/modes-de-financement/index.html
+++ b/content/pages/offre-de-formation/formation-continue/modes-de-financement/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Modes de financement"
-permalink: "/offre-de-formation/formation-continue/modes-de-financement"
+url: "/offre-de-formation/formation-continue/modes-de-financement"
 identifier: "b43ddfe8-4862-4150-a04d-5a8136e8c356"
 parent: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 related_category: ""
