--- a/content/pages/offre-de-formation/formation-continue/offre-de-formation-fc/index.html
+++ b/content/pages/offre-de-formation/formation-continue/offre-de-formation-fc/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Offre de formation"
-permalink: "/offre-de-formation/formation-continue/offre-de-formation-fc"
+url: "/offre-de-formation/formation-continue/offre-de-formation-fc"
 identifier: "7c002205-c91e-46b3-aa46-ec8f51337c55"
 parent: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 related_category: ""
