--- a/content/pages/offre-de-formation/formation-continue/organisation-du-service/index.html
+++ b/content/pages/offre-de-formation/formation-continue/organisation-du-service/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Organisation du service"
-permalink: "/offre-de-formation/formation-continue/organisation-du-service"
+url: "/offre-de-formation/formation-continue/organisation-du-service"
 identifier: "43e57d67-8ba0-4ab2-a1f5-7e6758806cb9"
 parent: "e287eb03-7596-4e6d-a3f9-27a36bec5345"
 related_category: ""
