--- a/content/pages/offre-de-formation/index.html
+++ b/content/pages/offre-de-formation/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Offre de formation"
-permalink: "/offre-de-formation"
+url: "/offre-de-formation"
 identifier: "28b6437c-ec64-4577-96b5-014beca5b24b"
 parent: ""
 related_category: ""
