--- a/content/pages/offre-de-formation/licences-pro/index.html
+++ b/content/pages/offre-de-formation/licences-pro/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licences professionnelles"
-permalink: "/offre-de-formation/licences-pro"
+url: "/offre-de-formation/licences-pro"
 identifier: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
