--- a/content/pages/offre-de-formation/licences-pro/licence-pro-conception-de-projets-mediation-artistique-et-culturelle/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-conception-de-projets-mediation-artistique-et-culturelle/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Conception de projets et Médiation Artistique et culturelle"
-permalink: "/offre-de-formation/licences-pro/licence-pro-conception-de-projets-mediation-artistique-et-culturelle"
+url: "/offre-de-formation/licences-pro/licence-pro-conception-de-projets-mediation-artistique-et-culturelle"
 identifier: "d0e7301a-cb8d-432c-80a1-6bcab4f49404"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
