--- a/content/pages/offre-de-formation/licences-pro/licence-pro-coordination-de-projets-de-developpement-social-et-culturel/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-coordination-de-projets-de-developpement-social-et-culturel/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Coordination de projets de développement social et culturel"
-permalink: "/offre-de-formation/licences-pro/licence-pro-coordination-de-projets-de-developpement-social-et-culturel"
+url: "/offre-de-formation/licences-pro/licence-pro-coordination-de-projets-de-developpement-social-et-culturel"
 identifier: "b5531fbc-30ad-4a9c-8357-11fc147bdde6"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
