--- a/content/pages/offre-de-formation/licences-pro/licence-pro-libraire/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-libraire/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Libraire"
-permalink: "/offre-de-formation/licences-pro/licence-pro-libraire"
+url: "/offre-de-formation/licences-pro/licence-pro-libraire"
 identifier: "f08f6619-d160-445f-a543-bfd354c0b09d"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
