--- a/content/pages/offre-de-formation/master/index.html
+++ b/content/pages/offre-de-formation/master/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Masters professionnels"
-permalink: "/offre-de-formation/master"
+url: "/offre-de-formation/master"
 identifier: "775652af-5579-40f5-904e-2d540569b9b9"
 parent: "28b6437c-ec64-4577-96b5-014beca5b24b"
 related_category: ""
