--- a/content/pages/offre-de-formation/master/master-pro-ingenierie-de-lanimation-territoriale/index.html
+++ b/content/pages/offre-de-formation/master/master-pro-ingenierie-de-lanimation-territoriale/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Master pro Ingénierie de l’Animation Territoriale"
-permalink: "/offre-de-formation/master/master-pro-ingenierie-de-lanimation-territoriale"
+url: "/offre-de-formation/master/master-pro-ingenierie-de-lanimation-territoriale"
 identifier: "1cdcac9f-1880-49f4-b435-40e1a8f21719"
 parent: "775652af-5579-40f5-904e-2d540569b9b9"
 related_category: ""
