--- a/content/pages/vie-etudiante/aide-entraide/contacter-un-mediateur/index.html
+++ b/content/pages/vie-etudiante/aide-entraide/contacter-un-mediateur/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Contacter un Médiateur"
-permalink: "/vie-etudiante/aide-entraide/contacter-un-mediateur"
+url: "/vie-etudiante/aide-entraide/contacter-un-mediateur"
 identifier: "cb1ca62a-6fb3-41c5-aaba-c5be803fae97"
 parent: "d34a0030-b071-49f4-b425-b71edb475dea"
 related_category: ""
