--- a/content/pages/vie-etudiante/aide-entraide/index.html
+++ b/content/pages/vie-etudiante/aide-entraide/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Aide et entraide"
-permalink: "/vie-etudiante/aide-entraide"
+url: "/vie-etudiante/aide-entraide"
 identifier: "d34a0030-b071-49f4-b425-b71edb475dea"
 parent: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
 related_category: ""
