--- a/content/pages/vie-etudiante/centre-de-ressources-montaigne/consulter-et-emprunter/index.html
+++ b/content/pages/vie-etudiante/centre-de-ressources-montaigne/consulter-et-emprunter/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Consulter et emprunter"
-permalink: "/vie-etudiante/centre-de-ressources-montaigne/consulter-et-emprunter"
+url: "/vie-etudiante/centre-de-ressources-montaigne/consulter-et-emprunter"
 identifier: "aba5aca4-0f58-4577-960d-4b60a773fdc2"
 parent: "1c219e0b-256a-4443-a55c-e4c629103e4c"
 related_category: ""
