--- a/content/pages/vie-etudiante/centre-de-ressources-montaigne/equipe/index.html
+++ b/content/pages/vie-etudiante/centre-de-ressources-montaigne/equipe/index.html
@@ -1,6 +1,6 @@
 ---
 title: "L’équipe qui vous accueille"
-permalink: "/vie-etudiante/centre-de-ressources-montaigne/equipe"
+url: "/vie-etudiante/centre-de-ressources-montaigne/equipe"
 identifier: "7e64ea44-c432-4ac1-9689-8e0fd64cfb74"
 parent: "1c219e0b-256a-4443-a55c-e4c629103e4c"
 related_category: ""
