--- a/content/pages/vie-etudiante/centre-de-ressources-montaigne/index.html
+++ b/content/pages/vie-etudiante/centre-de-ressources-montaigne/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Le Centre de Ressources Montaigne"
-permalink: "/vie-etudiante/centre-de-ressources-montaigne"
+url: "/vie-etudiante/centre-de-ressources-montaigne"
 identifier: "1c219e0b-256a-4443-a55c-e4c629103e4c"
 parent: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
 related_category: "c20fa01b-689d-4067-9179-62af169f8e26"
