--- a/content/pages/vie-etudiante/centre-de-ressources-montaigne/presentation-crm/index.html
+++ b/content/pages/vie-etudiante/centre-de-ressources-montaigne/presentation-crm/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Présentation du CRM IUT/IJBA"
-permalink: "/vie-etudiante/centre-de-ressources-montaigne/presentation-crm"
+url: "/vie-etudiante/centre-de-ressources-montaigne/presentation-crm"
 identifier: "3c5397d5-bffb-4b94-89e0-0b8e43169dd5"
 parent: "1c219e0b-256a-4443-a55c-e4c629103e4c"
 related_category: ""
