--- a/content/pages/vie-etudiante/index.html
+++ b/content/pages/vie-etudiante/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Vie étudiante"
-permalink: "/vie-etudiante"
+url: "/vie-etudiante"
 identifier: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
 parent: ""
 related_category: ""
