--- a/content/pages/vie-etudiante/scolarite/etre-candidat/index.html
+++ b/content/pages/vie-etudiante/scolarite/etre-candidat/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Être candidat·e"
-permalink: "/vie-etudiante/scolarite/etre-candidat"
+url: "/vie-etudiante/scolarite/etre-candidat"
 identifier: "4f3b280a-5426-418b-bcef-dfa396031c12"
 parent: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 related_category: ""
