--- a/content/pages/vie-etudiante/scolarite/etre-candidat/sportif-de-haut-niveau-etudiant-handicape/index.html
+++ b/content/pages/vie-etudiante/scolarite/etre-candidat/sportif-de-haut-niveau-etudiant-handicape/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Sportif de haut niveau / Etudiant handicapé"
-permalink: "/vie-etudiante/scolarite/etre-candidat/sportif-de-haut-niveau-etudiant-handicape"
+url: "/vie-etudiante/scolarite/etre-candidat/sportif-de-haut-niveau-etudiant-handicape"
 identifier: "ec837194-8b92-4f50-a3f2-9744fae8dbd3"
 parent: "4f3b280a-5426-418b-bcef-dfa396031c12"
 description: >
