--- a/content/pages/vie-etudiante/scolarite/etre-candidat/vae-vap/index.html
+++ b/content/pages/vie-etudiante/scolarite/etre-candidat/vae-vap/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Validation des acquis de l’expérience (VAE)"
-permalink: "/vie-etudiante/scolarite/etre-candidat/vae-vap"
+url: "/vie-etudiante/scolarite/etre-candidat/vae-vap"
 identifier: "1090e221-ea43-445c-b700-32740e263730"
 parent: "4f3b280a-5426-418b-bcef-dfa396031c12"
 description: >
