--- a/content/pages/vie-etudiante/scolarite/frais-dinscription/index.html
+++ b/content/pages/vie-etudiante/scolarite/frais-dinscription/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Frais d’inscription"
-permalink: "/vie-etudiante/scolarite/frais-dinscription"
+url: "/vie-etudiante/scolarite/frais-dinscription"
 identifier: "de51f60b-d1ea-46b4-a99c-369ae97c4a2f"
 parent: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 related_category: ""
