--- a/content/pages/vie-etudiante/scolarite/index.html
+++ b/content/pages/vie-etudiante/scolarite/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Scolarité"
-permalink: "/vie-etudiante/scolarite"
+url: "/vie-etudiante/scolarite"
 identifier: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 parent: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
 related_category: "934867a2-5141-4537-8ab1-05bd4b8ca17d"
