--- a/content/pages/vie-etudiante/scolarite/inscription-administrative/index.html
+++ b/content/pages/vie-etudiante/scolarite/inscription-administrative/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Inscription administrative"
-permalink: "/vie-etudiante/scolarite/inscription-administrative"
+url: "/vie-etudiante/scolarite/inscription-administrative"
 identifier: "d8c28358-8424-4865-90ad-af76f78434d8"
 parent: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 related_category: ""
