--- a/content/pages/vie-etudiante/scolarite/securite-sociale/index.html
+++ b/content/pages/vie-etudiante/scolarite/securite-sociale/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Sécurité sociale"
-permalink: "/vie-etudiante/scolarite/securite-sociale"
+url: "/vie-etudiante/scolarite/securite-sociale"
 identifier: "f3e6e5c3-d625-460b-8444-b1fcb29bb648"
 parent: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 related_category: ""
