--- a/content/pages/vie-etudiante/services-numeriques/aquipass/index.html
+++ b/content/pages/vie-etudiante/services-numeriques/aquipass/index.html
@@ -1,6 +1,6 @@
 ---
 title: "AquiPass"
-permalink: "/vie-etudiante/services-numeriques/aquipass"
+url: "/vie-etudiante/services-numeriques/aquipass"
 identifier: "13d65559-4ad2-4bcd-ac19-11ada0c6e074"
 parent: "b43be19d-3c60-4874-af77-d1a7a4f9f1fa"
 related_category: ""
