--- a/content/pages/vie-etudiante/services-numeriques/index.html
+++ b/content/pages/vie-etudiante/services-numeriques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Services numériques"
-permalink: "/vie-etudiante/services-numeriques"
+url: "/vie-etudiante/services-numeriques"
 identifier: "b43be19d-3c60-4874-af77-d1a7a4f9f1fa"
 parent: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
 related_category: ""
