--- a/content/pages/vie-etudiante/services-numeriques/outils-pedagogiques/index.html
+++ b/content/pages/vie-etudiante/services-numeriques/outils-pedagogiques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Outils pédagogiques"
-permalink: "/vie-etudiante/services-numeriques/outils-pedagogiques"
+url: "/vie-etudiante/services-numeriques/outils-pedagogiques"
 identifier: "a873cfb4-24e0-4ccc-91b2-fec23b14ace0"
 parent: "b43be19d-3c60-4874-af77-d1a7a4f9f1fa"
 related_category: ""
