--- a/content/pages/vie-etudiante/services-numeriques/service-dimpression/index.html
+++ b/content/pages/vie-etudiante/services-numeriques/service-dimpression/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Service d&#39;impression"
-permalink: "/vie-etudiante/services-numeriques/service-dimpression"
+url: "/vie-etudiante/services-numeriques/service-dimpression"
 identifier: "ad5d48bd-a535-4cd7-b791-dd778e54d532"
 parent: "b43be19d-3c60-4874-af77-d1a7a4f9f1fa"
 related_category: ""
