--- a/content/pages/colloque-isiat/index.html
+++ b/content/pages/colloque-isiat/index.html
@@ -1,13 +1,12 @@
 ---
 title: "Colloque de l’ISIAT"
-permalink: "/colloque-isiat"
+url: "/colloque-isiat"
 identifier: "24383cdd-ef99-40cc-bd62-5f48a65d7161"
 parent: ""
 related_category: ""
 position: 10
 description: >
-  
-text: >
-   
----
 
+text: >
+
+---
