--- a/content/pages/interface-de-mise-a-jour/index.html
+++ b/content/pages/interface-de-mise-a-jour/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Interface de mise à jour"
-permalink: "/interface-de-mise-a-jour"
+url: "/interface-de-mise-a-jour"
 identifier: "befea111-c236-4d63-a14a-a3683b27c625"
 parent: ""
 related_category: ""
