--- a/content/pages/offre-de-formation/licences-pro/licence-pro-bibliothecaire/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-bibliothecaire/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Bibliothécaire"
-permalink: "/offre-de-formation/licences-pro/licence-pro-bibliothecaire"
+url: "/offre-de-formation/licences-pro/licence-pro-bibliothecaire"
 identifier: "8c8cea35-e7ba-4f4a-9a1f-363836f9c353"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
