--- a/content/pages/offre-de-formation/licences-pro/licence-pro-communication-editoriale-et-digitale/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-communication-editoriale-et-digitale/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Communication éditoriale et digitale"
-permalink: "/offre-de-formation/licences-pro/licence-pro-communication-editoriale-et-digitale"
+url: "/offre-de-formation/licences-pro/licence-pro-communication-editoriale-et-digitale"
 identifier: "fd1befe4-840e-4724-94e1-8179e80c041f"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
