--- a/content/pages/offre-de-formation/licences-pro/licence-pro-editeur/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-editeur/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Éditeur"
-permalink: "/offre-de-formation/licences-pro/licence-pro-editeur"
+url: "/offre-de-formation/licences-pro/licence-pro-editeur"
 identifier: "fe1a28f9-c2e9-42b2-a403-e3098c8b7765"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
