--- a/content/pages/offre-de-formation/licences-pro/licence-pro-mediation-par-le-jeu-et-gestion-de-ludotheques/index.html
+++ b/content/pages/offre-de-formation/licences-pro/licence-pro-mediation-par-le-jeu-et-gestion-de-ludotheques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Licence pro Médiation par le jeu et gestion de ludothèques"
-permalink: "/offre-de-formation/licences-pro/licence-pro-mediation-par-le-jeu-et-gestion-de-ludotheques"
+url: "/offre-de-formation/licences-pro/licence-pro-mediation-par-le-jeu-et-gestion-de-ludotheques"
 identifier: "1623b281-1577-47f8-b5de-599e829c7bbd"
 parent: "cd9e4aeb-6be0-4986-8bde-123f9cfeb1ff"
 related_category: ""
