--- a/content/pages/vie-etudiante/scolarite/statistiques/index.html
+++ b/content/pages/vie-etudiante/scolarite/statistiques/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Statistiques"
-permalink: "/vie-etudiante/scolarite/statistiques"
+url: "/vie-etudiante/scolarite/statistiques"
 identifier: "24374921-2f75-4820-95fb-84c7e90ed973"
 parent: "bbfe3e19-1ef7-45ae-aa75-5b2862c1b409"
 related_category: ""
