--- a/content/programs/bachelor-universitaire-de-technologie/carrieres-sociales.html
+++ b/content/programs/bachelor-universitaire-de-technologie/carrieres-sociales.html
@@ -1,32 +1,32 @@
 ---
 title: "Carrières Sociales"
-permalink: /programmes/bachelor-universitaire-de-technologie/carrieres-sociales
+url: /programmes/bachelor-universitaire-de-technologie/carrieres-sociales
 identifier: "4c70f108-9595-4f5a-8042-e1404da9954f"
 parent: "f0e714da-31f2-407b-ae1b-0948cf911a06"
 continuing: false
 level: bachelor
-ects: 
+ects:
 position: 1
 accessibility: >
-   
+
 contacts: >
-   
+
 duration: >
-   
+
 evaluation: >
-   
+
 objectives: >
-   
+
 opportunities: >
-   
+
 other: >
-   
+
 pedagogy: >
-   
+
 prerequisites: >
-   
+
 pricing: >
-   
+
 registration: >
-   
+
 ---
