--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,7 @@
 ---
-title:
+title: L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin
 image: "29f2e051-1298-48d4-9e21-5badbd606d30"
 description: >
-  L’IUT Bordeaux Montaigne,<br><em>le plus court chemin pour aller loin</em>
+  L'Institut Universitaire de Technologie Bordeaux Montaigne, le plus court chemin pour aller loin
 ---
+L’IUT Bordeaux Montaigne,<br><em>le plus court chemin pour aller loin</em>
