--- a/content/persons/hbeneyrol.html
+++ b/content/persons/hbeneyrol.html
@@ -1,15 +1,7 @@
 ---
-title: "Beneyrol Hugo"
+title: "Hugo Beneyrol"
 slug: "hbeneyrol"
-identifier: "e45df0eb-0b2b-4a8c-aab0-3d9d82eae594"
-permalink: "/auteurs/hbeneyrol"
 first_name: "Hugo"
 last_name: "Beneyrol"
 biography: >
-   
-pagination:
-  enabled: true
-  tag: e45df0eb-0b2b-4a8c-aab0-3d9d82eae594
-  permalink: /:num/
 ---
-
