--- a/content/persons/justin-puyo.html
+++ b/content/persons/justin-puyo.html
@@ -1,15 +1,8 @@
 ---
-title: "Puyo Justin"
+title: "Justin Puyo"
 slug: "justin-puyo"
-identifier: "329f1e94-d90c-4db9-a529-7e0b3ff511b2"
-permalink: "/auteurs/justin-puyo"
 first_name: "Justin"
 last_name: "Puyo"
 biography: >
-  Lorem ipsum dolor sit amet 
-pagination:
-  enabled: true
-  tag: 329f1e94-d90c-4db9-a529-7e0b3ff511b2
-  permalink: /:num/
+  Lorem ipsum dolor sit amet
 ---
-
