--- a/content/programs/_index.html
+++ b/content/programs/_index.html
@@ -1,7 +1,7 @@
 ---
 title: L’offre de formation
 color: "#CA0051"
-url: /programmes
+url: /programmes/
 description: >
   Découvrez toute l’offre de formation de l’IUT
 ---
