--- a/content/_index.html
+++ b/content/_index.html
@@ -1,5 +1,6 @@
 ---
 title: L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin
+breadcrumb_title: Accueil
 image: "29f2e051-1298-48d4-9e21-5badbd606d30"
 description: >
   L'Institut Universitaire de Technologie Bordeaux Montaigne, le plus court chemin pour aller loin
