--- a/content/pages/vie-etudiante.html
+++ b/content/pages/vie-etudiante.html
@@ -1,10 +1,8 @@
 ---
 title: "Vie étudiante"
 url: "/vie-etudiante/"
-identifier: "7bf0cce0-0640-4564-83b1-31e50ae686dd"
-parent: ""
-related_category: "vie-etudiante"
-position: 4
+categories:
+  - "vie-etudiante"
 image: "595326bd-7508-4a3c-b884-b5a5c84ce872"
 description: >
   Vous trouverez sur cette page des informations utiles pour vous accompagner tout au long de vos années d’études, que ce soit au sein de l’IUT ou à l’extérieur. AquiPass Aide &amp; Entraide Services numériques Service d’impression Outils pédagogiques Contacter un→ Lire la suite … Continuer la lecture →
