--- a/content/pages/notre-institut.html
+++ b/content/pages/notre-institut.html
@@ -1,11 +1,11 @@
 ---
 title: "Notre Institut"
 url: "/notre-institut/"
-identifier: "75e9814e-7127-4bed-bd83-630cbb67da07"
-parent: ""
-related_category: ""
-position: 2
+categories:
 image: "b94a498d-41fe-4f22-aa3b-f97201b371af"
+child_pages:
+  - "/notre-institut/presentation-de-liut/"
+  - "/notre-institut/consignes-de-securite/"
 description: >
   Portée par l’exigence académique et le souci de l’efficacité professionnelle, notre mission est de former nos étudiantes et nos étudiants à devenir des cadres intermédiaires investis, rigoureux, polyvalents, créatifs. C’est pourquoi notre pédagogie, au cœur des sciences humaines et sociales, s’appuie sur la conduite de projets et privilégie un apprentissage des compétences, tourné vers l’emploi. Isabelle Cousserand-Blin, Directrice de l’IUT Bordeaux Montaigne
 ---
