--- a/content/programs/bachelor-universitaire-de-technologie/carrieres-sociales/_index.html
+++ b/content/programs/bachelor-universitaire-de-technologie/carrieres-sociales/_index.html
@@ -1,8 +1,8 @@
 ---
 title: "Carrières Sociales"
 url: /programmes/bachelor-universitaire-de-technologie/carrieres-sociales/
-identifier: "4c70f108-9595-4f5a-8042-e1404da9954f"
-parent: "f0e714da-31f2-407b-ae1b-0948cf911a06"
+categories:
+  - a-la-une
 continuing: false
 level: bachelor
 ects:
