--- a/content/programs/_index.html
+++ b/content/programs/_index.html
@@ -1,6 +1,6 @@
 ---
-title: L’offre de formation
-url: /programmes/
+title: Offre de formation
+url: /offre-de-formation/
 description: >
   Découvrez toute l’offre de formation de l’IUT
 ---
