--- a/content/programs/bachelor-universitaire-de-technologie/_index.html
+++ b/content/programs/bachelor-universitaire-de-technologie/_index.html
@@ -1,8 +1,6 @@
 ---
 title: "Bachelor Universitaire de Technologie"
-url: /programmes/bachelor-universitaire-de-technologie/
-identifier: "f0e714da-31f2-407b-ae1b-0948cf911a06"
-parent: ""
+url: "/offre-de-formation/bachelor-universitaire-de-technologie/"
 continuing: false
 level: bachelor
 ects:
