--- a/content/pages/notre-institut/equipe-pedagogique/_index.html
+++ b/content/pages/notre-institut/equipe-pedagogique/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Équipe pédagogique"
 url: "/notre-institut/equipe-pedagogique/"
+position: 2
 description: >
   L’équipe pédagogique de l’IUT Bordeaux Montaigne est composée d’enseignants permanents qui assurent une partie des cours et gèrent l’organisation des formations. Chaque formation fait également appel à des enseignants vacataires qui travaillent en entreprise ou dans d’autres structures.
 ---
