--- a/content/pages/notre-institut/plan-dacces-et-contact/_index.html
+++ b/content/pages/notre-institut/plan-dacces-et-contact/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Plan d’accès et contact"
 url: "/notre-institut/plan-dacces-et-contact/"
+position: 4
 description: >
   Où sommes nous ? ATTENTION : nous ne sommes pas sur le site du Campus Talence/Pessac ! L’IUT Bordeaux Montaigne est installé au centre ville de Bordeaux, proche de la gare SNCF : place Renaudel 1 rue Jacques Ellul 33800→ Lire la suite … Continuer la lecture →
 ---
