--- a/content/pages/notre-institut/presentation-de-liut/_index.html
+++ b/content/pages/notre-institut/presentation-de-liut/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Présentation de l&#39;IUT"
 url: "/notre-institut/presentation-de-liut/"
+position: 1
 description: >
   Le plus court chemin pour aller loin  « Portée par l’exigence académique et le souci de l’efficacité professionnelle, notre mission est de former nos étudiantes et nos étudiants à devenir des cadres intermédiaires investis, rigoureux, polyvalents, créatifs. C’est pourquoi notre pédagogie,→ Lire la suite … Continuer la lecture →
 ---
