--- a/content/pages/notre-institut/relations-avec-les-entreprises/_index.html
+++ b/content/pages/notre-institut/relations-avec-les-entreprises/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Relations avec les entreprises"
 url: "/notre-institut/relations-avec-les-entreprises/"
+position: 6
 description: >
   Un partenariat fort et durable avec les entreprises L’ouverture sur le monde économique est un des principes fondateurs des IUT. Depuis leur création, les IUT ont tissé des liens privilégiés avec les entreprises, c’est un des éléments explicatifs de leur→ Lire la suite … Continuer la lecture →
 ---
