--- a/content/pages/notre-institut/ressources-techniques/_index.html
+++ b/content/pages/notre-institut/ressources-techniques/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Ressources"
 url: "/notre-institut/ressources-techniques/"
+position: 7
 description: >
   L’IUT Bordeaux Montaigne dispose des ressources et équipements suivants : 1 centre de ressources documentaires donnant accès à 10 000 livres, 200 titres de périodiques, 2 000 mémoires et 150 DVD et vidéos en accès libre 550 ordinateurs en réseau 18 serveurs→ Lire la suite … Continuer la lecture →
 ---
