--- a/content/pages/notre-institut/les-atouts-des-iut/_index.html
+++ b/content/pages/notre-institut/les-atouts-des-iut/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Les atouts des IUT"
 url: "/notre-institut/les-atouts-des-iut/"
+position: 3
 description: >
   Une qualité d’enseignement universitaire reconnue et plébiscitée par les entreprises depuis plus de 50 ans plus d’1 million de diplômés depuis la création des IUT et déjà plus de 3000 diplômés de licence professionnelle 96% des dirigeants estiment que la→ Lire la suite … Continuer la lecture →
 ---
