--- a/content/_index.html
+++ b/content/_index.html
@@ -8,4 +8,4 @@ description: >
   Description homepage
 
 ---
-Description <strong>homepage</strong>  
+L’IUT Bordeaux Montaigne,<br><em>le plus court chemin pour aller loin</em>
