--- a/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet/_index.html
+++ b/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet/_index.html
@@ -6,10 +6,20 @@ level: bachelor
 ects:
 position: 3
 teachers:
-  - "78b9bffd-20d7-4b07-8cac-fb26a04732bc"
-  - "9157d738-e5c8-409a-8422-8a273e6468bc"
-  - "9bdec094-f06a-4f24-9a23-c8514148a613"
-  - "dd022cbb-7b56-4e64-bb03-4ea4e46ff33c"
+  - "marlene-dulaurans"
+  - "arnaud-levy"
+administrators:
+  - "quentin-bessiere"
+contact_list:
+  - title: "Cheffe de département"
+    persons:
+      - "marlene-dulaurans"
+  - title: "Directeur des études"
+    persons:
+      - "arnaud-levy"
+  - title: "Secrétariat"
+    persons:
+      - "quentin-bessiere"
 accessibility: >
 
 contacts: >
