--- a/content/persons/justin-puyo.html
+++ b/content/persons/justin-puyo.html
@@ -1,10 +1,10 @@
 ---
 title: >
-  Actualités
+  Justin Puyo
 slug: "justin-puyo"
 first_name: "Justin"
 last_name: "Puyo"
 phone: ""
 email: "justin.puyo@iut.u-bordeaux-montaigne.fr"
 ---
-Lorem ipsum
+Lorem ipsum 
