--- a/content/persons/justin-puyo.html
+++ b/content/persons/justin-puyo.html
@@ -6,5 +6,8 @@ first_name: "Justin"
 last_name: "Puyo"
 phone: ""
 email: "justin.puyo@iut.u-bordeaux-montaigne.fr"
+roles:
+  - author
+  - administrator
 ---
-Lorem ipsum 
+Lorem ipsum
