--- a/content/administrators/justin-puyo/_index.html
+++ b/content/administrators/justin-puyo/_index.html
@@ -1,10 +1,7 @@
 ---
 title: >
   Justin Puyo
+person: >
+  Justin Puyo
 slug: "justin-puyo"
-first_name: "Justin"
-last_name: "Puyo"
-phone: ""
-email: "justin.puyo@iut.u-bordeaux-montaigne.fr"
 ---
-Lorem ipsum 
