--- a/content/programs/master-professionnel/_index.html
+++ b/content/programs/master-professionnel/_index.html
@@ -5,8 +5,7 @@ url: /offre-de-formation/master-professionnel
 description: >
   Une formation théorique et pratique, beaucoup de mises en situations professionnelles par le biais de stages de longue durée et de projets collectifs, des interventions d’entreprise au cœur des cours
 position: 4
-categories:
-  - "bbc18d4d-5881-4f70-a588-78039a2384d0"
+category: "bbc18d4d-5881-4f70-a588-78039a2384d0"
 teachers:
   - "marlene-dulaurans"
   - "arnaud-levy"
@@ -24,29 +23,29 @@ contact_list:
       - "quentin-bessiere"
 continuing: false
 level: master
-ects: 
+ects:
 accessibility: >
-  
+
 contacts: >
-  
+
 duration: >
-  
+
 evaluation: >
-  
+
 objectives: >
-  
+
 opportunities: >
-  
+
 other: >
-  
+
 prerequisites: >
-  
+
 pricing: >
-  
+
 registration: >
-  
+
 results: >
-  
+
 content: >
-  
+
 ---
