--- a/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet/_index.html
+++ b/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet/_index.html
@@ -7,21 +7,10 @@ description: >
 position: 3
 category: "/offre-de-formation/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet"
 teachers:
-  - person: "eric-cattelain"
-    description: >
-      Interculturalité
-  - person: "claire-dhennezel"
-    description: >
-      Economie et droit du numérique
-  - person: "marlene-dulaurans"
-    description: >
-      Théories de l&#39;information, cyber-sécurité
-  - person: "arnaud-levy"
-    description: >
-      Design et technologies de l&#39;information
-  - person: "jean-pierre-salmon"
-    description: >
-      Informatique
+  - eric-cattelain
+teachers_description:
+  eric-cattelain: >
+    Interculturalité
 roles:
   - title: >
       Cheffe de département
