--- a/content/_index.html
+++ b/content/_index.html
@@ -8,7 +8,5 @@ image_alt: "L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin"
 description: >
   L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin
 header_text: >
-  <p><b>IUT Bordeaux Montaigne</b>,<br><i>le plus court chemin pour aller loin </i></p> 
+  <b>IUT Bordeaux Montaigne</b>,<br><i>le plus court chemin pour aller loin</i>
 ---
- 
-
