--- a/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet-2/_index.html
+++ b/content/programs/bachelor-universitaire-de-technologie/metiers-du-multimedia-et-de-l-internet-2/_index.html
@@ -73,6 +73,8 @@ roles:
 continuing: true
 level: bachelor
 ects: 180
+main_information: >
+  Rejoignez le B.U.T. Information Numérique dans les Organisations, la formation des professionnels de l’information et de la communication numérique.
 accessibility: >
   <p>L’ensemble des locaux est accessible. De nombreux aménagements ont été réalisés afin de faciliter l’accès des étudiants en situation de handicap moteur dans l’université. Il en va de même pour les équipements sanitaires. <br><br></p><p>Le Pôle Handicap de l'Université Bordeaux Montaigne a pour mission d'accueillir et d'accompagner dans leurs études les étudiants en situation de handicap.<br>Il assure ainsi le suivi des étudiants qui rencontrent des besoins spécifiques permanents, liés à un handicap ou à une maladie invalidante.</p><p>Ses actions tournent autour de trois grands axes : préparer l'arrivée à l'université des élèves handicapés en relation avec les personnes ressources de l'enseignement secondaire, accueillir et accompagner les étudiants handicapés tout au long de leur parcours universitaire, préparer avec eux leur insertion professionnelle.<br><br>Plus d'informations sur le site de l'université  →  <a href="https://etu.u-bordeaux-montaigne.fr/fr/etudes-et-scolarite/handicap.html">Handicap</a></p>
 contacts: >
@@ -111,11 +113,11 @@ blocks:
             Légende photo
           text: >
 
-          file: "e8d196b6-2318-43d1-bba1-0a58d303db6e"
+          file: "d54c05f2-13e2-461f-a81f-6cc82185c205"
         - alt: >
             Légende photo 2
           text: >
 
-          file: "e8d196b6-2318-43d1-bba1-0a58d303db6e"
+          file: "d54c05f2-13e2-461f-a81f-6cc82185c205"
 
 ---
