--- a/content/_index.html
+++ b/content/_index.html
@@ -4,7 +4,7 @@ title: >
 breadcrumb_title: "Accueil"
 url: "/"
 position: 13
-bodyclass: 
+bodyclass:
 image: "d54c05f2-13e2-461f-a81f-6cc82185c205"
 image_alt: "L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin"
 children:
@@ -23,7 +23,7 @@ description: >
 description_short: >
   L’IUT Bordeaux Montaigne, le plus court chemin pour aller loin
 header_text: >
-  <p><b>IUT Bordeaux Montaigne</b><br></p> 
+  IUT Bordeaux Montaigne
 
 ---
-<br> 
+<br>
