--- a/content/_index.html
+++ b/content/_index.html
@@ -37,6 +37,7 @@ blocks:
       Notre institut
     position: 1
     data:
+      layout: list
       page: /notre-institut/
       show_main_description: true
       show_descriptions: false
