update timeline block

--- a/content/pages/notre-institut/presentation-de-liut/histoire-et-heritage/_index.html
+++ b/content/pages/notre-institut/presentation-de-liut/histoire-et-heritage/_index.html
@@ -25,7 +25,7 @@ blocks:
       L'histoire de l'IUT
     position: 1
     data:
-      layout: vertical
+      layout: horizontal
 
       events:
         - title: >-
