--- a/content/programs/metiers-du-multimedia-et-de-l-internet/_index.html
+++ b/content/programs/metiers-du-multimedia-et-de-l-internet/_index.html
@@ -4,6 +4,7 @@ title: >
 url: /formation/offre-de-formation/metiers-du-multimedia-et-de-l-internet/
 registration_url: >
   /formation/scolarite/etre-candidat
+downloadable_summary: "c230328c-8122-4be6-bc7e-ea26be26cd1c"
 description: >
   Devenir un·e spécialiste des nouvelles technologies avec un sens aigu de la communication
 presentation: >
